# AutoClickerLinux

./: .gitignore  CMakeLists.txt  Messages.sh
icons/: CMakeLists.txt
src/: CMakeLists.txt  VirtualMouse.cpp  VirtualMouse.h  autoclickerlinux.ui  autoclickerlinuxwindow.cpp  autoclickerlinuxwindow.h  main.cpp  org.example.autoclickerlinux.desktop  org.example.autoclickerlinux.metainfo.xml
src/evdev/: EvDevDevice.cpp  EvDevDevice.h  EvDevException.cpp  EvDevException.h
src/portals/: GlobalShortcutsController.cpp  GlobalShortcutsController.h
